# raven

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/raven/: Cargo.toml
crates/raven-common/: Cargo.toml
crates/raven-common/src/: config.rs  utils.rs
crates/raven-database/: Cargo.toml
crates/raven-database/src/: database.rs  lib.rs
crates/raven-database/src/database/: sqlite.rs
crates/raven-database/src/database/sqlite/query/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
crates/raven-database/src/database/sqlite/sql/create/: history.sql
crates/raven-database/src/database/sqlite/sql/migrate/: v1_to_v2.sql  v2_to_v3.sql
crates/raven-database/src/history/: model.rs
crates/raven-database/src/import/: mod.rs  zsh.rs
crates/raven/src/: main.rs
crates/raven/src/command/: cli.rs  mod.rs
crates/raven/src/command/cli/: history.rs  import.rs  init.rs  search.rs
crates/raven/src/command/cli/init/: zsh.rs
crates/raven/src/command/cli/search/: app.rs  duration.rs  event.rs  interactive.rs  tui.rs
crates/raven/src/command/cli/search/snapshots/: raven__command__cli__search__app__tests__render_app.snap
crates/raven/src/shell/: raven.zsh
