[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.4"
authors = ["Tyler Saunders <tyler@thesummit.dev>"]
description = "raven - remembering your shell history."
repository = "https://github.com/tylersaunders/raven"
edition = "2024"
readme = "README.md"
license = "GPL-3.0-or-later"

[workspace.dependencies]
clap = { version = "4.5.30", features = ["derive"] }
crossterm = "0.28.1"
env_logger = "0.11.6"
insta = "1.43.0"
log = "0.4.26"
ratatui = {version = "0.29.0", features = ["unstable-widget-ref"]}
serde = { version = "1.0.219", features = ["derive"]}
time = "0.3.37"
toml = "0.8.21"
typed-builder = "0.20.0"
tempfile = "3.20.0"
