[package]
name = "raven-common"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }

[dependencies]
log = {workspace = true }
serde = { workspace = true }
toml = {workspace = true }
