[package]
name = "raven-database"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }

[dependencies]

raven-common = {path = "../raven-common"}

clap = { workspace = true }
log = { workspace = true }
# Use bundled to compile and link an up-to-date version of
# sqlite into the library. Avoids issues with the version
# of sqlite on the system which may be old or missing.
rusqlite = { version = "0.33.0", features = ["bundled"] }
time = { workspace = true}
typed-builder = { workspace = true }
