[package]
name = "raven"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }

[dependencies]
raven-common = { path = "../raven-common" }
raven-database = { path = "../raven-database" }
clap = { workspace = true }
crossterm = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
toml = {workspace = true }
